--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description"
-    content="Raja Khatri is a full stack web developer with over 2 years of experience in building responsive and user-friendly websites. Check out his portfolio to see his latest projects and learn more about his services." />
+    content="Harshit Gaurav is a creative designer with over 2 years of experience in website designing. Check out his portfolio to see his latest projects and learn more about his services." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -38,7 +38,7 @@
   <link href="./assets/fontawesome-free-6.4.0-web/css/fontawesome.css" rel="stylesheet">
   <link href="./assets/fontawesome-free-6.4.0-web/css/brands.css" rel="stylesheet">
   <link href="./assets/fontawesome-free-6.4.0-web/css/solid.css" rel="stylesheet">
-  <title>Rajat Khatri | Portfolio</title>
+  <title>Harshit Gaurav | Portfolio</title>
 </head>
 
 <body>
