google search console metatag for indexing

--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,8 @@
 <html lang="en">
 
 <head>
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0TPWDGCZWE"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-0TPWDGCZWE');
-  </script>
+  <title>Harshit Gaurav | Portfolio</title>
+  <meta name="google-site-verification" content="f7flZ3-8mZmge-xsWBav-4VQbb1SZRLjD5A_7fp7cXQ"   />
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -38,7 +31,6 @@
   <link href="./assets/fontawesome-free-6.4.0-web/css/fontawesome.css" rel="stylesheet">
   <link href="./assets/fontawesome-free-6.4.0-web/css/brands.css" rel="stylesheet">
   <link href="./assets/fontawesome-free-6.4.0-web/css/solid.css" rel="stylesheet">
-  <title>Harshit Gaurav | Portfolio</title>
 </head>
 
 <body>
